@startuml
namespace flyweight {
    class Circle << (S,Aquamarine) >> {
        + Color Color
        + Center Pos
        + Radius float64
        + LineWeight float64

        + Draw() 

    }
    class Particle << (S,Aquamarine) >> {
        - color Color

        + Draw(pos Pos) 

    }
    class ParticleFactory << (S,Aquamarine) >> {
        - particles <font color=blue>map</font>[Color]*Particle

        + GetParticle(c Color) *Particle

    }
    class Point << (S,Aquamarine) >> {
        + Pos Pos
        + LineWeight float64

        + Draw() 

    }
    class Pos << (S,Aquamarine) >> {
        + X float64
        + Y float64

    }
    interface Shape  {
        + Draw() 

    }
    class flyweight.Color << (T, #FF7700) >>  {
    }
}

"flyweight.ParticleFactory" -up-> "flyweight.Particle"
"flyweight.Point" "1" -right-> "m" "flyweight.Particle"
"flyweight.Circle" "1" -right-> "n" "flyweight.Point"
"flyweight.Particle" -right-> "flyweight.Pos"
"flyweight.Particle" --> "flyweight.Color"

"flyweight.Shape" <|-- "flyweight.Circle"
"flyweight.Shape" <|-- "flyweight.Point"

@enduml
